SD - 1.5.4 Add more settings for vanilla spawn mob: custom name, is baby, [attributes](https://hub.spigotmc.org/javadocs/spigot/org/bukkit/attribute/Attribute.html)